WIP start switching to huma, so we can use a more modern api spec
